--- a/veille/templates/main/connexion.html
+++ b/veille/templates/main/connexion.html
@@ -9,8 +9,8 @@
 		<nav href="#" class="menu-close" rel="nofollow">
 				<ul class="level-1">
                     <li> <a class="menu-item" href="" target="_blank">Vamo </a> </li>
-				   <li ><a  href="http://127.0.0.1:8000"><span class="menu-item-text">Accueil</span></a></li>
-				   <li>	<a  href="http://127.0.0.1:8000/inscription"><span class="menu-item-text">inscription</span></a></li>
+				   <li ><a  href="https://vamo13.herokuapp.com"><span class="menu-item-text">Accueil</span></a></li>
+				   <li>	<a  href="https://vamo13.herokuapp.com/inscription"><span class="menu-item-text">inscription</span></a></li>
                 </ul></nav>
 </head>
 
