--- a/veille/templates/main/home.html
+++ b/veille/templates/main/home.html
@@ -15,9 +15,9 @@
 			<nav href="#" class="menu-close" rel="nofollow">
 				<ul class="level-1">
 					<li> <a class="menu-item" href="" target="_blank">Vamo </a> </li>
-					<li class="wnd-active wnd-homepage"><a  href="http://127.0.0.1:8000"><span class="menu-item-text">Accueil</span></a></li>
-					<li>	<a  href="http://127.0.0.1:8000/inscription"><span class="menu-item-text">inscription</span></a></li>
-					<li>	<a  href="http://127.0.0.1:8000/connexion"><span class="menu-item-text">Connexion</span></a></li>
+					<li class="wnd-active wnd-homepage"><a  href="https://vamo13.herokuapp.com"><span class="menu-item-text">Accueil</span></a></li>
+					<li>	<a  href="https://vamo13.herokuapp.com/inscription"><span class="menu-item-text">inscription</span></a></li>
+					<li>	<a  href="https://vamo13.herokuapp.com/connexion"><span class="menu-item-text">Connexion</span></a></li>
 				   </ul>
 								</nav></div></div>
 
